--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -26,7 +26,7 @@ window#waybar{
     padding: 0px 15px 0px 15px;
     border-radius: 5px;
     min-height: 31px;
-    color:@color7;
+    color:@foreground;
     transition: all .3s ease;
 }
 
@@ -35,13 +35,13 @@ window#waybar{
 #tray,
 #taskbar{
     margin: 10px 0px 5px 10px;
-    background: linear-gradient(to right, alpha(@color8,0.5), alpha(@color8,0.7));
-    border: 2px solid @color4;
+    background: linear-gradient(to right, alpha(@background,0.5), alpha(@background,0.7));
+    border: 2px solid @color1;
 }
 #workspaces {
     margin: 10px 0px 5px 0px;
-    background: linear-gradient(to right, alpha(@color8,0.8), alpha(@color8,0.7));
-    border: 2px solid @color4;
+    background: linear-gradient(to right, alpha(@background,0.8), alpha(@background,0.7));
+    border: 2px solid @color1;
 }
 #bluetooth,
 #network,
@@ -49,20 +49,20 @@ window#waybar{
 #sound,
 #extras {
     margin: 10px 10px 5px 0px;
-    background: linear-gradient(to right, alpha(@color8,0.7), alpha(@color8,0.5));
-    border: 2px solid @color4;
+    background: linear-gradient(to right, alpha(@background,0.7), alpha(@background,0.5));
+    border: 2px solid @color1;
 }
 
 
 #cpu,#memory,#temperature,#custom-colorpicker{
     padding: 0px 5px;
-    transition: all .3s ease; 
-    color:@color7;
+    transition: all .3s ease;
+    color:@foreground;
 }
 
 #tooltip {
-    background: alpha(@color8,0.8);
-    color: @color7;
+    background: alpha(@background,0.8);
+    color: @foreground;
 }
 
 #clock:hover, 
@@ -85,32 +85,32 @@ window#waybar{
 #workspaces button {
     all:unset;
     padding: 0px 5px;
-    color: alpha(@color4,.4);
+    color: alpha(@color2,.6);
     transition: all .2s ease;
 }
 #workspaces button:hover {
-    color:rgba(0,0,0,0);
+    color:@color1;
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
 #workspaces button.active {
-    color: @color4;
+    color: @color2;
     border: none;
 }
 #workspaces button.empty {
-    color: rgba(0,0,0,0);
+    color: alpha(black, .2);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
 }
 #workspaces button.empty:hover {
-    color: rgba(0,0,0,0);
+    color: @color2;
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
 #workspaces button.empty.active {
-    color: @color4;
+    color: @color2;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
@@ -126,5 +126,5 @@ window#waybar{
 }
 #cava {
     font-family: "bargraph";
-    color: @color4;
+    color: @color2;
 }
